fixed build script

--- a/src/pages/index.ejs
+++ b/src/pages/index.ejs
@@ -5,7 +5,7 @@ title: 'ok'
 <div class="grid-container">
   <div class="grid-x">
     <div class="cell small-10 small-offset-1">
-
+Hey yo
     </div>
   </div>
 </div>
